# fast_api_with_uv

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml
app/: main.py
docs/: development.md  index.md
docs/api/: index.md
tests/unit/: test_health.py  test_items.py
