[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TODO-project-name"
version = "0.1.0"
description = "TODO: project description"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "httpx>=0.27",        # async HTTP client, also used in tests
]
[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["notebooks*", "tests*"]
[project.optional-dependencies]
dev = [
    "black>=24.0",
    "isort>=5.13",
    "mypy>=1.9",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "pre-commit>=3.0",
    "httpx>=0.27",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

# ── black ──────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 88
target-version = ["py310"]

# ── isort ─────────────────────────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 88

# ── mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=70"

# ── ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
